tests/integration/pilot/tunneling/gateway/tls-istio-mutual/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: TLS
    hosts:
    - external-app.testdomain
    tls:
      mode: ISTIO_MUTUAL
  - port:
      number: 443
      name: https
      protocol: TLS
    hosts:
    - external-app.testdomain
    tls:
      mode: ISTIO_MUTUAL
