tests/integration/pilot/tunneling/gateway/tls-istio-mutual/mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-external-app
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: external-app-mtls-gateway
    trafficPolicy:
      portLevelSettings:
      - port:
          number: 80
        tls:
          mode: ISTIO_MUTUAL
          sni: external-app.testdomain
      - port:
          number: 443
        tls:
          mode: ISTIO_MUTUAL
          sni: external-app.testdomain
