tests/integration/pilot/tunneling/gateway/tls-istio-mutual/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-app-route-via-egress-gateway
spec:
  hosts:
  - external-app.testdomain
  gateways:
  - mesh
  tls:
  - match:
    - port: 443
      sniHosts:
      - external-app.testdomain
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: external-app-mtls-gateway
        port:
          number: 443
  tcp:
  - match:
    - port: 8080
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: external-app-mtls-gateway
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-app-route-via-external-forward-proxy
spec:
  hosts:
  - external-app.testdomain
  gateways:
  - istio-egressgateway
  tcp:
  - match:
    - port: 80
    route:
    - destination:
        host: external-forward-proxy.testdomain
        subset: external-app-8080
        port:
          number: 3128
  - match:
    - port: 443
    route:
    - destination:
        host: external-forward-proxy.testdomain
        subset: external-app-443
        port:
          number: 3128
